/*
 * Copyright (C) 2022 PixieBrix, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

import { fireEvent, render } from "@testing-library/react";
import React from "react";
import SwitchButtonWidget from "./SwitchButtonWidget";

const values = [true, false];
test.each(values)("renders value %s", (value) => {
  const rendered = render(
    <SwitchButtonWidget
      name="Name for Test"
      value={value}
      onChange={jest.fn()}
    />
  );
  expect(rendered.asFragment()).toMatchSnapshot();
});

test.each(values)("calls onChange", (value) => {
  const name = "Name for Test";
  const onChangeMock = jest.fn();
  const { container } = render(
    <SwitchButtonWidget value={value} onChange={onChangeMock} name={name} />
  );

  fireEvent.click(container.querySelector(".switch"));

  expect(onChangeMock).toHaveBeenCalledWith({
    target: {
      value: !value,
      name,
    },
  });
});
